[gd_scene load_steps=5 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Dungeon/PossessedBlade/PossessedSwordUp.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Dungeon/OldMan/OldManSwords.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[node name="OldManSwords" type="Node2D"]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="Sword1" type="Sprite" parent="YSort"]
position = Vector2( 72, 0 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword1" instance=ExtResource( 1 )]

[node name="Sword2" type="Sprite" parent="YSort"]
position = Vector2( -72, 0 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword2" instance=ExtResource( 1 )]

[node name="Sword3" type="Sprite" parent="YSort"]
position = Vector2( 0, 72 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword3" instance=ExtResource( 1 )]

[node name="Sword4" type="Sprite" parent="YSort"]
position = Vector2( 0, -72 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword4" instance=ExtResource( 1 )]

[node name="Sword5" type="Sprite" parent="YSort"]
position = Vector2( 56, 56 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword5" instance=ExtResource( 1 )]

[node name="Sword6" type="Sprite" parent="YSort"]
position = Vector2( -56, 56 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword6" instance=ExtResource( 1 )]

[node name="Sword7" type="Sprite" parent="YSort"]
position = Vector2( -56, -56 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword7" instance=ExtResource( 1 )]

[node name="Sword8" type="Sprite" parent="YSort"]
position = Vector2( 56, -56 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="YSort/Sword8" instance=ExtResource( 1 )]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
